# tod

./: .travis.yml  CHANGELOG.rst  CMakeLists.txt  README  genindex.html  index.html  objects.inv  package.xml  search.html  searchindex.js  setup.py  stack.xml  stack.yaml
_sources/: index.txt
apps/: feature_viewer
cmake/: config.cmake  install.cmake  todConfig-version.cmake.in  todConfig.cmake.in
conf/: config_detection.tod  config_training.tod  detection.ork  detection.ros.ork  detection_autotuned.ros.ork  detection_kde.ros.ork  detection_kmeans.ros.ork  detection_lsh.ros.ork  detection_rndm.ros.ork  training.ork
doc/source/: conf.py  index.rst
python/object_recognition_tod/: __init__.py  detector.py  trainer.py
python/tod/: __init__.py  detector.py  models.py  trainer.py
src/: CMakeLists.txt
src/common/: CMakeLists.txt  adjacency_ransac.cpp  adjacency_ransac.h  maximum_clique.cpp  maximum_clique.h  ransac.h  sac.h  sac_model.h  sac_model_registration.h  sac_model_registration_graph.h
src/common/impl/: ransac.hpp  sac_model_registration.hpp
src/detection/: CMakeLists.txt  DescriptorMatcher.cpp  GuessGenerator.cpp  LshMatcher.cpp  ModelReader.cpp  module.cpp
src/tod/detection/: CMakeLists.txt  GuessGenerator.cpp
src/training/: CMakeLists.txt  CameraToWorld.cpp  KeypointValidator.cpp  ModelFiller.cpp  ModelStacker.cpp  PointMerger.cpp  PrepareForG2O.cpp  Trainer.cpp  module.cpp  training.cpp  training.h
test/: CMakeLists.txt  test_help.py  test_maximum_clique.cpp  test_tod_detection.py  test_tod_training.py
test/tod/: CMakeLists.txt
